[package]
name = "either"
version = "1.6.1"
authors = ["bluss"]

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/either"
documentation = "https://docs.rs/either/1/"
readme = "README-crates.io.md"

description = """
The enum `Either` with variants `Left` and `Right` is a general purpose sum type with two cases.
"""

keywords = ["data-structure", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"],git="https://github.com/mesalock-linux/serde-sgx.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
[features]
default = [] 
mesalock_sgx = ["sgx_tstd"]
use_std = []

[dev-dependencies]
serde_json = "1.0.0"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = ["serde"]
